refactor, extend balancedbatchsampler

--- a/examples/MSD_integration.ipynb
+++ b/examples/MSD_integration.ipynb
@@ -34,14 +34,25 @@
     "from folktables import ACSDataSource, ACSIncome, generate_categories\n",
     "\n",
     "# load folktables data\n",
-    "data_source = ACSDataSource(survey_year='2018', horizon='1-Year', survey='person')\n",
+    "data_source = ACSDataSource(survey_year=\"2018\", horizon=\"1-Year\", survey=\"person\")\n",
     "acs_data = data_source.get_data(states=[\"CA\"], download=True)\n",
     "definition_df = data_source.get_definitions(download=True)\n",
-    "categories = generate_categories(features=ACSIncome.features, definition_df=definition_df)\n",
-    "df_feat, df_labels, _ = ACSIncome.df_to_pandas(acs_data,categories=categories, dummies=True)\n",
+    "categories = generate_categories(\n",
+    "    features=ACSIncome.features, definition_df=definition_df\n",
+    ")\n",
+    "df_feat, df_labels, _ = ACSIncome.df_to_pandas(\n",
+    "    acs_data, categories=categories, dummies=True\n",
+    ")\n",
     "\n",
-    "sens_feature_names = [\"SCHL\", \"SEX\", \"RAC1P\", \"AGEP\"] # leave OCCP out for now cause it has 524 (!) values\n",
-    "sens_col_names = [col for col in df_feat.columns if col.startswith(tuple(sens_feature_names))]\n",
+    "sens_feature_names = [\n",
+    "    \"SCHL\",\n",
+    "    \"SEX\",\n",
+    "    \"RAC1P\",\n",
+    "    \"AGEP\",\n",
+    "]  # leave OCCP out for now cause it has 524 (!) values\n",
+    "sens_col_names = [\n",
+    "    col for col in df_feat.columns if col.startswith(tuple(sens_feature_names))\n",
+    "]\n",
     "\n",
     "features = df_feat.drop(columns=sens_col_names).to_numpy(dtype=\"float\")\n",
     "groups = df_feat[sens_col_names].to_numpy(dtype=\"float\")\n",
@@ -49,8 +60,16 @@
     "\n",
     "# split\n",
     "indices = np.arange(len(features))\n",
-    "X_train, X_test, y_train, y_test, groups_train, groups_test, indices_train, indices_test = train_test_split(\n",
-    "    features, labels, groups, indices, test_size=0.2, random_state=42)\n",
+    "(\n",
+    "    X_train,\n",
+    "    X_test,\n",
+    "    y_train,\n",
+    "    y_test,\n",
+    "    groups_train,\n",
+    "    groups_test,\n",
+    "    indices_train,\n",
+    "    indices_test,\n",
+    ") = train_test_split(features, labels, groups, indices, test_size=0.2, random_state=42)\n",
     "# scale\n",
     "scaler = StandardScaler()\n",
     "X_train = scaler.fit_transform(X_train)\n",
@@ -58,7 +77,7 @@
     "\n",
     "# make into a pytorch dataset, remove the sensitive attribute\n",
     "features_train = torch.tensor(X_train, dtype=torch.float32)\n",
-    "labels_train = torch.tensor(y_train,dtype=torch.float32)\n",
+    "labels_train = torch.tensor(y_train, dtype=torch.float32)\n",
     "sens_train = torch.tensor(groups_train)\n",
     "dataset_train = torch.utils.data.TensorDataset(features_train, labels_train)"
    ]
@@ -539,24 +558,28 @@
     "# - add negations for binary features as a separate column (already done via categories+get_dummies)\n",
     "# - discretize continuous features\n",
     "\n",
-    "df_feat_msd, df_labels, _ = ACSIncome.df_to_pandas(acs_data,categories=categories,dummies=True)\n",
-    "df_feat_msd, df_labels = df_feat_msd[sens_col_names].iloc[indices_train], df_labels.iloc[indices_train]\n",
+    "df_feat_msd, df_labels, _ = ACSIncome.df_to_pandas(\n",
+    "    acs_data, categories=categories, dummies=True\n",
+    ")\n",
+    "df_feat_msd, df_labels = (\n",
+    "    df_feat_msd[sens_col_names].iloc[indices_train],\n",
+    "    df_labels.iloc[indices_train],\n",
+    ")\n",
     "\n",
     "cont_sens_feature_names = [\"AGEP\"]\n",
-    "ds = KBinsDiscretizer(n_bins=10, encode='onehot-dense')\n",
+    "ds = KBinsDiscretizer(n_bins=10, encode=\"onehot-dense\")\n",
     "cont_bins = ds.fit_transform(df_feat_msd[cont_sens_feature_names])\n",
     "for fidx, cont_feature in enumerate(cont_sens_feature_names):\n",
     "    for i in range(ds.n_bins_[fidx]):\n",
-    "        lb, ub = ds.bin_edges_[fidx][i], ds.bin_edges_[fidx][i+1]\n",
-    "        df_feat_msd['_'.join([cont_feature, str(lb), str(ub)])] = cont_bins[:,i].astype(bool)\n",
+    "        lb, ub = ds.bin_edges_[fidx][i], ds.bin_edges_[fidx][i + 1]\n",
+    "        df_feat_msd[\"_\".join([cont_feature, str(lb), str(ub)])] = cont_bins[\n",
+    "            :, i\n",
+    "        ].astype(bool)\n",
     "\n",
     "df_feat_msd.drop(columns=cont_sens_feature_names, inplace=True)\n",
     "df_feat_msd = df_feat_msd.convert_dtypes(convert_boolean=True)\n",
     "\n",
-    "Conjuncts_kwargs = {\n",
-    "    'solver': 'glpk',\n",
-    "    'time_limit': 600\n",
-    "}\n",
+    "Conjuncts_kwargs = {\"solver\": \"glpk\", \"time_limit\": 600}\n",
     "\n",
     "# cat_features = list(set(df_feat_msd.columns) - set(cont_feature_names))\n",
     "# FEATURE_PROCESSING = {\n",
@@ -569,7 +592,7 @@
     "# df_feat_msd[cat_features] = oe.fit_transform(df_feat_msd[cat_features])\n",
     "\n",
     "MSD_kwargs = {\n",
-    "    'n_samples': 200,\n",
+    "    \"n_samples\": 200,\n",
     "}\n",
     "\n",
     "df_feat_msd"
@@ -585,7 +608,9 @@
     "from fairret.statistic import PositiveRate\n",
     "from fairret.loss import NormLoss\n",
     "\n",
-    "dataset = torch.utils.data.TensorDataset(features_train, torch.tensor(df_feat_msd.to_numpy(dtype=bool)), labels_train)\n",
+    "dataset = torch.utils.data.TensorDataset(\n",
+    "    features_train, torch.tensor(df_feat_msd.to_numpy(dtype=bool)), labels_train\n",
+    ")\n",
     "\n",
     "# we need bigger batch size to make sure that each batch contains members of each potential subgroup\n",
     "dataloader = torch.utils.data.DataLoader(dataset, shuffle=True, batch_size=96)\n",
@@ -614,7 +639,7 @@
     "    torch.nn.ReLU(),\n",
     "    torch.nn.Linear(hsize1, hsize2),\n",
     "    torch.nn.ReLU(),\n",
-    "    torch.nn.Linear(hsize2, 1)\n",
+    "    torch.nn.Linear(hsize2, 1),\n",
     ")\n",
     "\n",
     "from humancompatible.train.optim import SSLALM_Adam\n",
@@ -625,8 +650,8 @@
     "    lr=0.05,\n",
     "    dual_lr=0.05,\n",
     "    dual_bound=50,\n",
-    "    rho=1.,\n",
-    "    mu=2.,\n",
+    "    rho=1.0,\n",
+    "    mu=2.0,\n",
     ")\n",
     "\n",
     "# add slack variables\n",
@@ -903,21 +928,17 @@
     "    duals_log = []\n",
     "\n",
     "    for batch_input, batch_sens, batch_label in tqdm(dataloader, leave=False):\n",
-    "        \n",
     "        # calculate constraints and constraint grads\n",
     "        out = model_con(batch_input)\n",
     "        c_log.append([])\n",
     "        for j, conj_indices in enumerate(constraints):\n",
     "            # one-hot evaluation of rule `j`\n",
-    "            sens_attrs = batch_sens[:,conj_indices]\n",
+    "            sens_attrs = batch_sens[:, conj_indices]\n",
     "            rule_eval = torch.prod(sens_attrs, dim=1, keepdim=True, dtype=bool)\n",
-    "            batch_rule_groups = torch.cat([rule_eval,~rule_eval],dim=1)\n",
+    "            batch_rule_groups = torch.cat([rule_eval, ~rule_eval], dim=1)\n",
     "            # evaluate fairret loss\n",
     "            fair_loss = fair_criterion(out, batch_rule_groups)\n",
-    "            fair_constraint = torch.max(\n",
-    "                fair_loss - fair_crit_bound,\n",
-    "                torch.zeros(1)\n",
-    "            )\n",
+    "            fair_constraint = torch.max(fair_loss - fair_crit_bound, torch.zeros(1))\n",
     "            fair_constraint.backward(retain_graph=True)\n",
     "            # dual update\n",
     "            optimizer.dual_step(j, c_val=fair_constraint)\n",
@@ -937,8 +958,8 @@
     "            for s in slack_vars:\n",
     "                if s < 0:\n",
     "                    s.zero_()\n",
-    "    \n",
-    "    # dimin dual stepsize  \n",
+    "\n",
+    "    # dimin dual stepsize\n",
     "    # optimizer.dual_lr *= 0.98\n",
     "\n",
     "    # print epoch stats\n",
@@ -950,22 +971,24 @@
     "            f\"dual: {np.mean(duals_log, axis=0)}\"\n",
     "        )\n",
     "\n",
-    "    if epoch > 0 and epoch % ((1+len(constraints))*msd_interval) == 0 and len(constraints) <= 5:\n",
+    "    if (\n",
+    "        epoch > 0\n",
+    "        and epoch % ((1 + len(constraints)) * msd_interval) == 0\n",
+    "        and len(constraints) <= 5\n",
+    "    ):\n",
     "        ### find new MSD ###\n",
     "        with torch.no_grad():\n",
-    "            indices = random.sample(range(len(df_feat_msd)), MSD_kwargs['n_samples'])\n",
+    "            indices = random.sample(range(len(df_feat_msd)), MSD_kwargs[\"n_samples\"])\n",
     "            MSD_sample_model_input = dataset[indices][0]\n",
     "            MSD_sample_x = df_feat_msd.iloc[indices].to_numpy(dtype=bool)\n",
     "            # get binary predictions on sample\n",
     "            MSD_sample_y = (\n",
-    "                torch.nn.functional.sigmoid(\n",
-    "                    model_con(MSD_sample_model_input)\n",
-    "                    ).squeeze() > 0.5).numpy()\n",
+    "                torch.nn.functional.sigmoid(model_con(MSD_sample_model_input)).squeeze()\n",
+    "                > 0.5\n",
+    "            ).numpy()\n",
     "        if not np.any(MSD_sample_y):\n",
     "            continue\n",
-    "        conj_indices = get_conjuncts_MSD(\n",
-    "            MSD_sample_x, MSD_sample_y, **Conjuncts_kwargs\n",
-    "        )\n",
+    "        conj_indices = get_conjuncts_MSD(MSD_sample_x, MSD_sample_y, **Conjuncts_kwargs)\n",
     "        print(f\"Adding new rule: {df_feat_msd.columns[conj_indices].to_list()}\")\n",
     "        constraints.append(conj_indices)\n",
     "        optimizer.add_constraint()"
@@ -989,7 +1012,7 @@
     }
    ],
    "source": [
-    "batch_sens[:,0].shape"
+    "batch_sens[:, 0].shape"
    ]
   },
   {
@@ -1000,6 +1023,7 @@
    "outputs": [],
    "source": [
     "from humancompatible.detect.binarizer import Bin\n",
+    "\n",
     "\n",
     "def rule_to_indicator(rule, features):\n",
     "    \"\"\"\n",
@@ -1102,9 +1126,11 @@
     "from matplotlib import pyplot as plt\n",
     "\n",
     "window_len = 5\n",
-    "c_mavg = np.array([np.mean(ep_c_log[i:i+window_len]) for i in range(0, len(ep_c_log), window_len)])\n",
+    "c_mavg = np.array(\n",
+    "    [np.mean(ep_c_log[i : i + window_len]) for i in range(0, len(ep_c_log), window_len)]\n",
+    ")\n",
     "plt.plot(np.array(c_mavg).flatten(), lw=0.05)\n",
-    "plt.hlines(y=fair_crit_bound, xmin=0, xmax=len(c_mavg), colors='black', ls='--')"
+    "plt.hlines(y=fair_crit_bound, xmin=0, xmax=len(c_mavg), colors=\"black\", ls=\"--\")"
    ]
   }
  ],
@@ -1123,7 +1149,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
