--- a/examples/learn_DAG.ipynb
+++ b/examples/learn_DAG.ipynb
@@ -33,7 +33,9 @@
     "np.random.seed(1)\n",
     "\n",
     "\n",
-    "def generate_data(n: int, d: int, n_causes: int, noise_std: float, device: torch.device):\n",
+    "def generate_data(\n",
+    "    n: int, d: int, n_causes: int, noise_std: float, device: torch.device\n",
+    "):\n",
     "    \"\"\"Generate data from a linear structural equation model with Gaussian noise.\n",
     "    The\n",
     "\n",
@@ -181,10 +183,10 @@
     "optimizer = SSLALM_Adam(\n",
     "    params=[A],\n",
     "    m=1,\n",
-    "    mu=0.,\n",
+    "    mu=0.0,\n",
     "    lr=0.01,\n",
     "    dual_lr=0.05,\n",
-    "    rho=2.,\n",
+    "    rho=2.0,\n",
     "    dual_bound=10,\n",
     ")\n",
     "\n",
@@ -202,7 +204,7 @@
     "\n",
     "for i in range(N_STEPS):\n",
     "    A.data.fill_diagonal_(0)\n",
-    "    A.data.clamp_(min=0, max=1.)\n",
+    "    A.data.clamp_(min=0, max=1.0)\n",
     "\n",
     "    cviol = constraint(A)\n",
     "    cviol.backward()\n",
@@ -241,6 +243,7 @@
     "\n",
     "# plotting functions\n",
     "\n",
+    "\n",
     "def plot_adjacency(adjacency, gt_adjacency):\n",
     "    \"\"\"Plot side by side: 1)the learned adjacency matrix, 2)the ground truth adj\n",
     "    matrix and 3)the difference of these matrices\n",
@@ -252,7 +255,14 @@
     "    plt.clf()\n",
     "    _, (ax1, ax2, ax3) = plt.subplots(ncols=3, nrows=1)\n",
     "\n",
-    "    kwargs = {\"vmin\": 0, \"vmax\": 1, \"center\": 0.5, \"cmap\": \"Blues\", \"xticklabels\": False, \"yticklabels\": False}\n",
+    "    kwargs = {\n",
+    "        \"vmin\": 0,\n",
+    "        \"vmax\": 1,\n",
+    "        \"center\": 0.5,\n",
+    "        \"cmap\": \"Blues\",\n",
+    "        \"xticklabels\": False,\n",
+    "        \"yticklabels\": False,\n",
+    "    }\n",
     "    sns.heatmap(adjacency, ax=ax2, cbar=False, **kwargs)\n",
     "    sns.heatmap(gt_adjacency, ax=ax3, cbar=False, **kwargs)\n",
     "    diff = adjacency - gt_adjacency\n",
@@ -269,6 +279,7 @@
     "\n",
     "    plt.show()\n",
     "\n",
+    "\n",
     "def plot_progress(steps, losses, violations, duals):\n",
     "    _, ax = plt.subplots(3, 1, sharex=True)\n",
     "    ax[0].plot(steps, losses, \"tab:blue\")\n",
@@ -280,7 +291,7 @@
     "    ax[2].set_ylabel(\"Dual parameters\", labelpad=10, fontsize=10)\n",
     "\n",
     "    ax[2].set_xlabel(\"Steps\", fontsize=12)\n",
-    "    \n",
+    "\n",
     "    plt.show()"
    ]
   },
@@ -351,7 +362,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
