--- a/examples/learn_pde.ipynb
+++ b/examples/learn_pde.ipynb
@@ -40,13 +40,15 @@
    "outputs": [],
    "source": [
     "def u(x, t, alpha):\n",
-    "    return torch.exp(-alpha*(pi**2)*t)*torch.sin(pi*x)\n",
+    "    return torch.exp(-alpha * (pi**2) * t) * torch.sin(pi * x)\n",
+    "\n",
     "\n",
     "def du_dt(x, t, alpha):\n",
-    "    return -(alpha*pi**2)*torch.exp(-alpha*t*pi**2)*torch.sin(pi*x)\n",
+    "    return -(alpha * pi**2) * torch.exp(-alpha * t * pi**2) * torch.sin(pi * x)\n",
+    "\n",
     "\n",
     "def d2u_dx2(x, t, alpha):\n",
-    "    return -(pi**2)*torch.exp(-alpha*t*pi**2)*torch.sin(pi*x)"
+    "    return -(pi**2) * torch.exp(-alpha * t * pi**2) * torch.sin(pi * x)"
    ]
   },
   {
@@ -68,9 +70,12 @@
     "n_x = 100\n",
     "n_t = 100\n",
     "max_t = 100\n",
-    "alpha = 4*1e-8\n",
+    "alpha = 4 * 1e-8\n",
     "\n",
-    "features, t = torch.linspace(start=0, end=1, steps=n_x), torch.linspace(start=0, end=max_t, steps=n_t)\n",
+    "features, t = (\n",
+    "    torch.linspace(start=0, end=1, steps=n_x),\n",
+    "    torch.linspace(start=0, end=max_t, steps=n_t),\n",
+    ")\n",
     "xx, tt = torch.meshgrid(features, t)\n",
     "y = u(xx, tt, alpha)\n",
     "\n",
@@ -78,8 +83,8 @@
     "    # torch.vstack((xx.flatten(),tt.flatten())).T.requires_grad_(),\n",
     "    xx.flatten().requires_grad_(),\n",
     "    tt.flatten().requires_grad_(),\n",
-    "    y.flatten().unsqueeze(1)\n",
-    "    )"
+    "    y.flatten().unsqueeze(1),\n",
+    ")"
    ]
   },
   {
@@ -96,7 +101,7 @@
     "    torch.nn.Sigmoid(),\n",
     "    torch.nn.Linear(48, 32),\n",
     "    torch.nn.GELU(),\n",
-    "    torch.nn.Linear(32,1)\n",
+    "    torch.nn.Linear(32, 1),\n",
     ")"
    ]
   },
@@ -119,9 +124,17 @@
    "outputs": [],
    "source": [
     "constraints = [\n",
-    "    lambda _, t: torch.nn.functional.mse_loss(model(torch.vstack((torch.zeros_like(t), t)).T), torch.zeros_like(t).unsqueeze(1)),\n",
-    "    lambda _, t: torch.nn.functional.mse_loss(model(torch.vstack((torch.ones_like(t), t)).T), torch.zeros_like(t).unsqueeze(1)),\n",
-    "    lambda x, _: torch.nn.functional.mse_loss(model(torch.vstack((x, torch.zeros_like(x))).T), torch.sin(torch.pi*x).unsqueeze(1))\n",
+    "    lambda _, t: torch.nn.functional.mse_loss(\n",
+    "        model(torch.vstack((torch.zeros_like(t), t)).T),\n",
+    "        torch.zeros_like(t).unsqueeze(1),\n",
+    "    ),\n",
+    "    lambda _, t: torch.nn.functional.mse_loss(\n",
+    "        model(torch.vstack((torch.ones_like(t), t)).T), torch.zeros_like(t).unsqueeze(1)\n",
+    "    ),\n",
+    "    lambda x, _: torch.nn.functional.mse_loss(\n",
+    "        model(torch.vstack((x, torch.zeros_like(x))).T),\n",
+    "        torch.sin(torch.pi * x).unsqueeze(1),\n",
+    "    ),\n",
     "]\n",
     "\n",
     "constraint_multipliers = torch.tensor([0.1, 0.1, 0.1])"
@@ -212,9 +225,7 @@
     "    loss_log = []\n",
     "    c_log = []\n",
     "    for x, t, y in loader:\n",
-    "        y_hat = model(\n",
-    "            torch.vstack((x, t)).T\n",
-    "        )\n",
+    "        y_hat = model(torch.vstack((x, t)).T)\n",
     "\n",
     "        cs = []\n",
     "        regularization = 0\n",
@@ -230,22 +241,22 @@
     "            inputs=x,\n",
     "            grad_outputs=None,\n",
     "            create_graph=True,\n",
-    "            materialize_grads=True)[0]\n",
-    "        \n",
+    "            materialize_grads=True,\n",
+    "        )[0]\n",
+    "\n",
     "        jac_t = torch.autograd.grad(\n",
     "            outputs=y_hat.unbind(),\n",
     "            inputs=t,\n",
     "            grad_outputs=None,\n",
     "            create_graph=True,\n",
-    "            materialize_grads=True)[0]\n",
-    "        \n",
-    "        hess_x = torch.autograd.grad(\n",
-    "            outputs=jac_x.unbind(),\n",
-    "            inputs=x,\n",
-    "            create_graph=True,\n",
-    "            materialize_grads=True)[0]\n",
+    "            materialize_grads=True,\n",
+    "        )[0]\n",
     "\n",
-    "        loss_d = mse_loss(jac_t, alpha*hess_x)\n",
+    "        hess_x = torch.autograd.grad(\n",
+    "            outputs=jac_x.unbind(), inputs=x, create_graph=True, materialize_grads=True\n",
+    "        )[0]\n",
+    "\n",
+    "        loss_d = mse_loss(jac_t, alpha * hess_x)\n",
     "        loss_pred = mse_loss(y_hat, y)\n",
     "\n",
     "        loss = loss_d + loss_pred + regularization\n",
@@ -254,10 +265,10 @@
     "        optimizer.zero_grad()\n",
     "\n",
     "        loss_log.append(loss.detach().numpy())\n",
-    "    print(sum(loss_log)/len(loss_log))\n",
-    "    epoch_loss_log.append(sum(loss_log)/len(loss_log))\n",
-    "    print(sum(c_log)/len(c_log))\n",
-    "    epoch_c_log.append(sum(c_log)/len(c_log))"
+    "    print(sum(loss_log) / len(loss_log))\n",
+    "    epoch_loss_log.append(sum(loss_log) / len(loss_log))\n",
+    "    print(sum(c_log) / len(c_log))\n",
+    "    epoch_c_log.append(sum(c_log) / len(c_log))"
    ]
   },
   {
@@ -279,7 +290,7 @@
    ],
    "source": [
     "f = plt.figure()\n",
-    "ax = f.subplots(1,2)\n",
+    "ax = f.subplots(1, 2)\n",
     "ax[0].plot(epoch_loss_log)\n",
     "ax[1].plot(epoch_c_log)\n",
     "f.tight_layout()\n",
@@ -328,38 +339,52 @@
     "t = torch.rand(500).requires_grad_()\n",
     "preds = model(torch.vstack((x, t)).T).unbind()\n",
     "jac_t = torch.autograd.grad(\n",
-    "        outputs=preds,\n",
-    "        inputs=t,\n",
-    "        grad_outputs=None,\n",
-    "        create_graph=True,\n",
-    "        materialize_grads=True)[0]\n",
+    "    outputs=preds,\n",
+    "    inputs=t,\n",
+    "    grad_outputs=None,\n",
+    "    create_graph=True,\n",
+    "    materialize_grads=True,\n",
+    ")[0]\n",
     "hess_x = torch.autograd.grad(\n",
-    "        outputs=jac_x.unbind(),\n",
-    "        inputs=x,\n",
-    "        create_graph=True,\n",
-    "        materialize_grads=True)[0]\n",
-    "loss_d = torch.nn.functional.mse_loss(jac_t, alpha*hess_x).detach()\n",
+    "    outputs=jac_x.unbind(), inputs=x, create_graph=True, materialize_grads=True\n",
+    ")[0]\n",
+    "loss_d = torch.nn.functional.mse_loss(jac_t, alpha * hess_x).detach()\n",
     "\n",
     "with torch.inference_mode():\n",
     "    _u = u(x, t, alpha=alpha)\n",
     "    preds = model(torch.vstack((x, t)).T).flatten()\n",
-    "    print('Overall MSE')\n",
+    "    print(\"Overall MSE\")\n",
     "    print(torch.nn.functional.mse_loss(preds, _u))\n",
-    "    print('MSE on jacobian-hessian relation')\n",
+    "    print(\"MSE on jacobian-hessian relation\")\n",
     "    print(loss_d)\n",
-    "    print('MSE on x=0')\n",
-    "    print(torch.nn.functional.mse_loss(model(torch.vstack((torch.zeros_like(t), t)).T).squeeze(), torch.zeros_like(preds)))\n",
-    "    print('MSE on x=1')\n",
-    "    print(torch.nn.functional.mse_loss(model(torch.vstack((torch.ones_like(t), t)).T).squeeze(), torch.zeros_like(preds)))\n",
-    "    print('MSE on t=0')\n",
-    "    print(torch.nn.functional.mse_loss(model(torch.vstack((x, torch.zeros_like(x))).T).squeeze(), torch.sin(torch.pi*x)))\n",
+    "    print(\"MSE on x=0\")\n",
+    "    print(\n",
+    "        torch.nn.functional.mse_loss(\n",
+    "            model(torch.vstack((torch.zeros_like(t), t)).T).squeeze(),\n",
+    "            torch.zeros_like(preds),\n",
+    "        )\n",
+    "    )\n",
+    "    print(\"MSE on x=1\")\n",
+    "    print(\n",
+    "        torch.nn.functional.mse_loss(\n",
+    "            model(torch.vstack((torch.ones_like(t), t)).T).squeeze(),\n",
+    "            torch.zeros_like(preds),\n",
+    "        )\n",
+    "    )\n",
+    "    print(\"MSE on t=0\")\n",
+    "    print(\n",
+    "        torch.nn.functional.mse_loss(\n",
+    "            model(torch.vstack((x, torch.zeros_like(x))).T).squeeze(),\n",
+    "            torch.sin(torch.pi * x),\n",
+    "        )\n",
+    "    )\n",
     "\n",
-    "    ax = plt.figure().add_subplot(projection='3d')\n",
+    "    ax = plt.figure().add_subplot(projection=\"3d\")\n",
     "    ax.scatter(xs=x, ys=t, zs=_u, alpha=1)\n",
-    "    ax.scatter(xs=x, ys=t, zs=preds,alpha=0.5)\n",
-    "    ax.set_xlabel('x')\n",
-    "    ax.set_ylabel('t')\n",
-    "    ax.set_zlabel('u')"
+    "    ax.scatter(xs=x, ys=t, zs=preds, alpha=0.5)\n",
+    "    ax.set_xlabel(\"x\")\n",
+    "    ax.set_ylabel(\"t\")\n",
+    "    ax.set_zlabel(\"u\")"
    ]
   },
   {
@@ -396,13 +421,21 @@
     "    torch.nn.Sigmoid(),\n",
     "    torch.nn.Linear(48, 32),\n",
     "    torch.nn.GELU(),\n",
-    "    torch.nn.Linear(32,1)\n",
+    "    torch.nn.Linear(32, 1),\n",
     ")\n",
     "\n",
     "constraints = [\n",
-    "    lambda _, t: torch.nn.functional.mse_loss(model(torch.vstack((torch.zeros_like(t), t)).T), torch.zeros_like(t).unsqueeze(1)),\n",
-    "    lambda _, t: torch.nn.functional.mse_loss(model(torch.vstack((torch.ones_like(t), t)).T), torch.zeros_like(t).unsqueeze(1)),\n",
-    "    lambda x, _: torch.nn.functional.mse_loss(model(torch.vstack((x, torch.zeros_like(x))).T), torch.sin(torch.pi*x).unsqueeze(1))\n",
+    "    lambda _, t: torch.nn.functional.mse_loss(\n",
+    "        model(torch.vstack((torch.zeros_like(t), t)).T),\n",
+    "        torch.zeros_like(t).unsqueeze(1),\n",
+    "    ),\n",
+    "    lambda _, t: torch.nn.functional.mse_loss(\n",
+    "        model(torch.vstack((torch.ones_like(t), t)).T), torch.zeros_like(t).unsqueeze(1)\n",
+    "    ),\n",
+    "    lambda x, _: torch.nn.functional.mse_loss(\n",
+    "        model(torch.vstack((x, torch.zeros_like(x))).T),\n",
+    "        torch.sin(torch.pi * x).unsqueeze(1),\n",
+    "    ),\n",
     "]\n",
     "m = len(constraints)\n",
     "# slack_vars = torch.zeros(m).requires_grad_()\n",
@@ -410,11 +443,11 @@
     "optimizer = SSLALM_Adam(\n",
     "    params=model.parameters(),\n",
     "    m=m,\n",
-    "    mu=0.,\n",
+    "    mu=0.0,\n",
     "    lr=0.005,\n",
     "    # dual_lr=0.01,\n",
     "    dual_lr=0.01,\n",
-    "    rho=1.,\n",
+    "    rho=1.0,\n",
     "    dual_bound=10,\n",
     ")"
    ]
@@ -503,18 +536,16 @@
     "for epoch in range(epochs):\n",
     "    loss_log = []\n",
     "    c_log = []\n",
-    "    for x ,t, y in loader:\n",
-    "        y_hat = model(\n",
-    "            torch.vstack((x, t)).T\n",
-    "        )\n",
-    "        \n",
+    "    for x, t, y in loader:\n",
+    "        y_hat = model(torch.vstack((x, t)).T)\n",
+    "\n",
     "        cs = []\n",
     "        for j, constraint in enumerate(constraints):\n",
-    "            c = constraint(x, t)# + slack_vars[j]\n",
+    "            c = constraint(x, t)  # + slack_vars[j]\n",
     "            c.backward()\n",
     "            optimizer.dual_step(j, c)\n",
     "            optimizer.zero_grad()\n",
-    "            \n",
+    "\n",
     "            cs.append((c.detach()).detach().numpy())\n",
     "        c_log.append(np.array(cs))\n",
     "\n",
@@ -523,25 +554,25 @@
     "            inputs=x,\n",
     "            grad_outputs=None,\n",
     "            create_graph=True,\n",
-    "            materialize_grads=True)[0]\n",
-    "        \n",
+    "            materialize_grads=True,\n",
+    "        )[0]\n",
+    "\n",
     "        jac_t = torch.autograd.grad(\n",
     "            outputs=y_hat.unbind(),\n",
     "            inputs=t,\n",
     "            grad_outputs=None,\n",
     "            create_graph=True,\n",
-    "            materialize_grads=True)[0]\n",
-    "        \n",
-    "        hess_x = torch.autograd.grad(\n",
-    "            outputs=jac_x.unbind(),\n",
-    "            inputs=x,\n",
-    "            create_graph=True,\n",
-    "            materialize_grads=True)[0]\n",
+    "            materialize_grads=True,\n",
+    "        )[0]\n",
     "\n",
-    "        loss_d = mse_loss(jac_t, alpha*hess_x)\n",
+    "        hess_x = torch.autograd.grad(\n",
+    "            outputs=jac_x.unbind(), inputs=x, create_graph=True, materialize_grads=True\n",
+    "        )[0]\n",
+    "\n",
+    "        loss_d = mse_loss(jac_t, alpha * hess_x)\n",
     "        loss_pred = mse_loss(y_hat, y)\n",
     "\n",
-    "        loss = loss_d + loss_pred #+ torch.zeros_like(slack_vars) @ slack_vars\n",
+    "        loss = loss_d + loss_pred  # + torch.zeros_like(slack_vars) @ slack_vars\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "        optimizer.zero_grad()\n",
@@ -553,10 +584,10 @@
     "        #             slack_vars[j].zero_()\n",
     "\n",
     "        loss_log.append(loss.detach().numpy())\n",
-    "    print(sum(loss_log)/len(loss_log))\n",
-    "    epoch_loss_log.append(sum(loss_log)/len(loss_log))\n",
-    "    print(sum(c_log)/len(c_log))\n",
-    "    epoch_c_log.append(sum(c_log)/len(c_log))"
+    "    print(sum(loss_log) / len(loss_log))\n",
+    "    epoch_loss_log.append(sum(loss_log) / len(loss_log))\n",
+    "    print(sum(c_log) / len(c_log))\n",
+    "    epoch_c_log.append(sum(c_log) / len(c_log))"
    ]
   },
   {
@@ -578,7 +609,7 @@
    ],
    "source": [
     "f = plt.figure()\n",
-    "ax = f.subplots(1,2)\n",
+    "ax = f.subplots(1, 2)\n",
     "ax[0].plot(epoch_loss_log)\n",
     "ax[1].plot(epoch_c_log)\n",
     "f.tight_layout()\n",
@@ -648,38 +679,52 @@
     "t = torch.rand(500).requires_grad_()\n",
     "preds = model(torch.vstack((x, t)).T).unbind()\n",
     "jac_t = torch.autograd.grad(\n",
-    "        outputs=preds,\n",
-    "        inputs=t,\n",
-    "        grad_outputs=None,\n",
-    "        create_graph=True,\n",
-    "        materialize_grads=True)[0]\n",
+    "    outputs=preds,\n",
+    "    inputs=t,\n",
+    "    grad_outputs=None,\n",
+    "    create_graph=True,\n",
+    "    materialize_grads=True,\n",
+    ")[0]\n",
     "hess_x = torch.autograd.grad(\n",
-    "        outputs=jac_x.unbind(),\n",
-    "        inputs=x,\n",
-    "        create_graph=True,\n",
-    "        materialize_grads=True)[0]\n",
-    "loss_d = torch.nn.functional.mse_loss(jac_t, alpha*hess_x).detach()\n",
+    "    outputs=jac_x.unbind(), inputs=x, create_graph=True, materialize_grads=True\n",
+    ")[0]\n",
+    "loss_d = torch.nn.functional.mse_loss(jac_t, alpha * hess_x).detach()\n",
     "\n",
     "with torch.inference_mode():\n",
     "    _u = u(x, t, alpha=alpha)\n",
     "    preds = model(torch.vstack((x, t)).T).flatten()\n",
-    "    print('Overall MSE')\n",
+    "    print(\"Overall MSE\")\n",
     "    print(torch.nn.functional.mse_loss(preds, _u))\n",
-    "    print('MSE on jacobian-hessian relation')\n",
+    "    print(\"MSE on jacobian-hessian relation\")\n",
     "    print(loss_d)\n",
-    "    print('MSE on x=0')\n",
-    "    print(torch.nn.functional.mse_loss(model(torch.vstack((torch.zeros_like(t), t)).T).squeeze(), torch.zeros_like(preds)))\n",
-    "    print('MSE on x=1')\n",
-    "    print(torch.nn.functional.mse_loss(model(torch.vstack((torch.ones_like(t), t)).T).squeeze(), torch.zeros_like(preds)))\n",
-    "    print('MSE on t=0')\n",
-    "    print(torch.nn.functional.mse_loss(model(torch.vstack((x, torch.zeros_like(x))).T).squeeze(), torch.sin(torch.pi*x)))\n",
+    "    print(\"MSE on x=0\")\n",
+    "    print(\n",
+    "        torch.nn.functional.mse_loss(\n",
+    "            model(torch.vstack((torch.zeros_like(t), t)).T).squeeze(),\n",
+    "            torch.zeros_like(preds),\n",
+    "        )\n",
+    "    )\n",
+    "    print(\"MSE on x=1\")\n",
+    "    print(\n",
+    "        torch.nn.functional.mse_loss(\n",
+    "            model(torch.vstack((torch.ones_like(t), t)).T).squeeze(),\n",
+    "            torch.zeros_like(preds),\n",
+    "        )\n",
+    "    )\n",
+    "    print(\"MSE on t=0\")\n",
+    "    print(\n",
+    "        torch.nn.functional.mse_loss(\n",
+    "            model(torch.vstack((x, torch.zeros_like(x))).T).squeeze(),\n",
+    "            torch.sin(torch.pi * x),\n",
+    "        )\n",
+    "    )\n",
     "\n",
-    "    ax = plt.figure().add_subplot(projection='3d')\n",
+    "    ax = plt.figure().add_subplot(projection=\"3d\")\n",
     "    ax.scatter(xs=x, ys=t, zs=_u, alpha=1)\n",
-    "    ax.scatter(xs=x, ys=t, zs=preds,alpha=0.5)\n",
-    "    ax.set_xlabel('x')\n",
-    "    ax.set_ylabel('t')\n",
-    "    ax.set_zlabel('u')"
+    "    ax.scatter(xs=x, ys=t, zs=preds, alpha=0.5)\n",
+    "    ax.set_xlabel(\"x\")\n",
+    "    ax.set_ylabel(\"t\")\n",
+    "    ax.set_zlabel(\"u\")"
    ]
   }
  ],
