temp for checkout

--- a/examples/constrained_training.ipynb
+++ b/examples/constrained_training.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "48b9577d",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "834e083e",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "ea8758f7",
    "metadata": {},
    "outputs": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "4c957562",
    "metadata": {},
    "outputs": [],
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "8793a889",
    "metadata": {},
    "outputs": [
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "9fd521be",
    "metadata": {},
    "outputs": [
@@ -339,7 +339,7 @@
        "tensor([0.3708, 0.5209], dtype=torch.float64, grad_fn=<IndexPutBackward0>)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "b0e2bd5d",
    "metadata": {},
    "outputs": [],
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "1b5d4833",
    "metadata": {},
    "outputs": [],
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "8564545d",
    "metadata": {},
    "outputs": [
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "993899e3",
    "metadata": {},
    "outputs": [
@@ -573,7 +573,7 @@
        "tensor([0.3871, 0.4702], dtype=torch.float64, grad_fn=<IndexPutBackward0>)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "4ac5a57f",
    "metadata": {},
    "outputs": [
@@ -598,7 +598,7 @@
        "tensor(0.1934, dtype=torch.float64, grad_fn=<SumBackward0>)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "170d5dbf",
    "metadata": {},
    "outputs": [
@@ -619,7 +619,7 @@
        "<matplotlib.collections.LineCollection at 0x7fb730b08ad0>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "d1b0abd5",
    "metadata": {},
    "outputs": [],
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "3af4f40c",
    "metadata": {},
    "outputs": [],
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "c03fa9f9",
    "metadata": {},
    "outputs": [
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "3f4e4383",
    "metadata": {},
    "outputs": [
@@ -915,7 +915,7 @@
        "tensor([0.4365, 0.4693], dtype=torch.float64, grad_fn=<IndexPutBackward0>)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "d25cb25b",
    "metadata": {},
    "outputs": [
@@ -940,7 +940,7 @@
        "tensor(0.0722, dtype=torch.float64, grad_fn=<SumBackward0>)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "f25ef130",
    "metadata": {},
    "outputs": [
@@ -961,7 +961,7 @@
        "<matplotlib.collections.LineCollection at 0x7fb5a56fb750>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1004,8 +1004,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.14"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
