--- a/experiments/cifar_experiment.ipynb
+++ b/experiments/cifar_experiment.ipynb
@@ -201,34 +201,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 155,
    "id": "6ea6dede",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.556,\n",
-       " {'plane': 0.626,\n",
-       "  'car': 0.607,\n",
-       "  'bird': 0.358,\n",
-       "  'cat': 0.557,\n",
-       "  'deer': 0.499,\n",
-       "  'dog': 0.381,\n",
-       "  'frog': 0.538,\n",
-       "  'horse': 0.579,\n",
-       "  'ship': 0.665,\n",
-       "  'truck': 0.75},\n",
-       " tensor([0.4952, 0.5017, 0.2655, 0.3402, 0.3268, 0.3260, 0.3985, 0.4470, 0.5067,\n",
-       "         0.5972]),\n",
-       " tensor(2.1187))"
-      ]
-     },
-     "execution_count": 150,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def test_network(network):\n",
     "    \n",
@@ -245,13 +221,24 @@
     "    # prepare accuracy per group\n",
     "    soft_acc_per_group = torch.zeros(10)\n",
     "\n",
+    "    loss_log = []\n",
+    "    c_log = []\n",
+    "\n",
     "    # since we're not training, we don't need to calculate the gradients for our outputs\n",
     "    with torch.no_grad():\n",
+    "\n",
     "        for data in testloader:\n",
     "            \n",
     "            images, labels = data[0].to(device), data[1].to(device)\n",
     "            # calculate outputs by running images through the network\n",
     "            outputs = network(images)\n",
+    "\n",
+    "            # compute the loss\n",
+    "            loss = criterion(outputs, labels)   \n",
+    "\n",
+    "            # save the logs\n",
+    "            loss_log.append(loss.detach().cpu().numpy())\n",
+    "            c_log.append([])\n",
     "\n",
     "            # the class with the highest energy is what we choose as prediction\n",
     "            _, predicted = torch.max(outputs, 1)\n",
@@ -276,6 +263,12 @@
     "\n",
     "                total_pred[classes[label]] += 1\n",
     "\n",
+    "            # save the value of the constraint\n",
+    "            overall_accuracy = soft_acc_per_group.mean()\n",
+    "            constr = torch.norm(1 - soft_acc_per_group / overall_accuracy, p=1)\n",
+    "\n",
+    "            c_log[-1].append(constr.detach().cpu().numpy())\n",
+    "\n",
     "    # compute the accuracy per class\n",
     "    for classname, correct_count in correct_pred.items():\n",
     "        accuracy = float(correct_count) / total_pred[classname]\n",
@@ -287,43 +280,52 @@
     "    constr = torch.norm(1 - soft_acc_per_group / overall_accuracy, p=1)\n",
     "\n",
     "    # returns total hard accuracy, hard accuracy per group, soft accuracy per group and accuracy constraint\n",
-    "    return correct / total , correct_pred, soft_acc_per_group, constr\n",
-    "\n",
-    "test_network(net)"
+    "    return loss_log, c_log, correct / total , correct_pred, soft_acc_per_group, constr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 158,
    "id": "cc363cdf",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1,  2000] loss: 2.216\n",
-      "[1,  4000] loss: 1.885\n",
-      "[1,  6000] loss: 1.694\n",
-      "[1,  8000] loss: 1.602\n",
-      "[1, 10000] loss: 1.537\n",
-      "[1, 12000] loss: 1.471\n",
-      "[2,  2000] loss: 1.413\n",
-      "[2,  4000] loss: 1.369\n",
-      "[2,  6000] loss: 1.318\n",
-      "[2,  8000] loss: 1.331\n",
-      "[2, 10000] loss: 1.292\n",
-      "[2, 12000] loss: 1.262\n",
-      "Finished Training\n"
+     "ename": "ValueError",
+     "evalue": "too many values to unpack (expected 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[158], line 77\u001b[0m\n\u001b[1;32m     74\u001b[0m S_c_std_log_plotting\u001b[38;5;241m.\u001b[39mappend(np\u001b[38;5;241m.\u001b[39mstd(c_log, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m))\n\u001b[1;32m     76\u001b[0m \u001b[38;5;66;03m# test the network after each epoch\u001b[39;00m\n\u001b[0;32m---> 77\u001b[0m losses_test, c_test , acc_pergroup_t, soft_acc_per_group, constr_t \u001b[38;5;241m=\u001b[39m test_network(net)\n\u001b[1;32m     79\u001b[0m test_S_loss_log_plotting\u001b[38;5;241m.\u001b[39mappend(np\u001b[38;5;241m.\u001b[39mmean(losses_test))\n\u001b[1;32m     80\u001b[0m test_S_c_log_plotting\u001b[38;5;241m.\u001b[39mappend(np\u001b[38;5;241m.\u001b[39mmean(c_test, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m))\n",
+      "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 5)"
      ]
     }
    ],
    "source": [
     "for epoch in range(n_epochs):  # loop over the dataset multiple times\n",
     "\n",
-    "    running_loss = 0.0\n",
+    "    # alloc the logging arrays for the batch\n",
+    "    loss_log = []\n",
+    "    c_log = []\n",
+    "\n",
+    "    # alloc arrays for plotting\n",
+    "    S_loss_log_plotting = []  # mean\n",
+    "    S_c_log_plotting = []  # mean\n",
+    "    S_loss_std_log_plotting = []  # std\n",
+    "    S_c_std_log_plotting = []  # std\n",
+    "\n",
+    "    test_S_loss_log_plotting = []  # mean\n",
+    "    test_S_c_log_plotting = []  # mean\n",
+    "    test_S_loss_std_log_plotting = []  # std\n",
+    "    test_S_c_std_log_plotting = []  # std\n",
+    "\n",
+    "    total_pred = {classname: 0 for classname in classes}\n",
+    "\n",
     "    for i, data in enumerate(trainloader, 0):\n",
-    "        \n",
+    "    \n",
+    "        # prepare accuracy per group\n",
+    "        soft_acc_per_group = torch.zeros(10)\n",
+    "\n",
     "        # get the inputs; data is a list of [inputs, labels]\n",
     "        inputs, labels = data[0].to(device), data[1].to(device)\n",
     "\n",
@@ -332,15 +334,63 @@
     "\n",
     "        # forward + backward + optimize\n",
     "        outputs = net(inputs)\n",
+    "        \n",
+    "        # compute the probablities\n",
+    "        probs = torch.softmax(outputs, dim=1)\n",
+    "\n",
+    "        # compute the fairness - soft accuracy per group\n",
+    "        accuracy_per_group = probs.gather(1, labels.unsqueeze(1)).squeeze()\n",
+    "\n",
+    "        # compute the constraints - accuracy among all groups\n",
+    "        for idx, label in enumerate(labels):\n",
+    "\n",
+    "            # save the number of samples per that group in the batch\n",
+    "            total_pred[classes[label]] += 1\n",
+    "\n",
+    "            # add the soft prediction\n",
+    "            soft_acc_per_group[label] += accuracy_per_group[idx]\n",
+    "\n",
+    "        # normalize the accuracy by the number of samples\n",
+    "        for classname, total_count in total_pred.items():\n",
+    "            soft_acc_per_group[ class_ind[classname] ] /= total_count\n",
+    "\n",
+    "        # save the value of the constraint\n",
+    "        overall_accuracy = soft_acc_per_group.mean()\n",
+    "        constr = torch.norm(1 - soft_acc_per_group / overall_accuracy, p=1)\n",
+    "        c_log.append([])\n",
+    "        c_log[-1].append(constr.detach().cpu().numpy())\n",
+    "\n",
+    "        # compute the loss\n",
     "        loss = criterion(outputs, labels)\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "\n",
-    "        # print statistics\n",
-    "        running_loss += loss.item()\n",
+    "        # save the logs\n",
+    "        loss_log.append(loss.detach().cpu().numpy())\n",
+    "\n",
+    "        # print the statistics\n",
     "        if i % 2000 == 1999:    # print every 2000 mini-batches\n",
-    "            print(f'[{epoch + 1}, {i + 1:5d}] loss: {running_loss / 2000:.3f}')\n",
-    "            running_loss = 0.0\n",
+    "\n",
+    "            S_loss_log_plotting.append(np.mean(loss_log))\n",
+    "            S_c_log_plotting.append(np.mean(c_log, axis=0))\n",
+    "            S_loss_std_log_plotting.append(np.std(loss_log, axis=0))\n",
+    "            S_c_std_log_plotting.append(np.std(c_log, axis=0))\n",
+    "\n",
+    "            # test the network after each epoch\n",
+    "            losses_test, c_test , acc_pergroup_t, soft_acc_per_group, constr_t = test_network(net)\n",
+    "\n",
+    "            test_S_loss_log_plotting.append(np.mean(losses_test))\n",
+    "            test_S_c_log_plotting.append(np.mean(c_test, axis=0))\n",
+    "            test_S_loss_std_log_plotting.append(np.std(losses_test, axis=0))\n",
+    "            test_S_c_std_log_plotting.append(np.std(c_test, axis=0))\n",
+    "\n",
+    "            print(\n",
+    "                f\"Step: {epoch, i + 1:5d}, \"\n",
+    "                f\"loss ({np.mean(loss_log):.4f}/{np.mean(losses_test):.4f}):\"\n",
+    "                f\"constraints (train/test): ({np.max(np.abs(np.mean(c_log, axis=0))):.4f}/{np.max(np.abs(np.mean(c_test, axis=0))):.4f}), \"\n",
+    "            )\n",
+    "\n",
+    "            \n",
     "\n",
     "print('Finished Training')"
    ]
