small changes to wrapper example

--- a/examples/benchmarking_wrapper_example.ipynb
+++ b/examples/benchmarking_wrapper_example.ipynb
@@ -452,6 +452,8 @@
     }
    ],
    "source": [
+    "# PLOTTING (WIP)\n",
+    "\n",
     "# import pandas as pd\n",
     "# from matplotlib import pyplot as plt\n",
     "\n",
