--- a/examples/constrained_training.ipynb
+++ b/examples/constrained_training.ipynb
@@ -812,7 +812,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
